--- a/Python_M4_exercise.ipynb
+++ b/Python_M4_exercise.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "module_4_exercise.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -94,9 +80,19 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "id": "daMf-xaXqKs2"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Overwriting carros.csv\n"
+          ]
+        }
+      ],
       "source": [
         "%%writefile carros.csv\n",
         "id,valor_venda,valor_manutencao,portas,pessoas,porta_malas\n",
@@ -114,9 +110,7 @@
         "12,low,low,2,2,small\n",
         "13,low,low,4,4,small\n",
         "14,low,low,4,4,med"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -129,9 +123,19 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
         "id": "m7Ge2rggrU73"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Overwriting musica.txt\n"
+          ]
+        }
+      ],
       "source": [
         "%%writefile musica.txt\n",
         "Roda Viva\n",
@@ -162,9 +166,7 @@
         "\n",
         "Roda mundo, roda-gigante\n",
         "Roda moinho, roda pião"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -195,22 +197,37 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "W-1PAg7Ctt7i"
       },
+      "outputs": [],
       "source": [
         "def extrai_coluna_csv(nome_arquivo: str, indice_coluna: int, tipo_dado: str):\n",
         "\n",
         "  coluna = []\n",
         "\n",
-        "  # leia o arquivo com o comando 'with' utilizando o parametro 'nome_arquivo'\n",
-        "  # extraia a coluna do arquivo utilizando o parametro 'indice_coluna'\n",
-        "  # use a estrutura de decisão if/elif/else para fazer a conversão do tipo de dados utilizando o parametro 'tipo_dado'\n",
+        "  with open(file=nome_arquivo, mode='r', encoding='utf-8') as conteudo:\n",
+        "    \n",
+        "    conteudo.readline()\n",
+        "    \n",
+        "    for linha in conteudo:\n",
+        "      linha_limpa = linha.strip()\n",
+        "      valores = linha_limpa.split(',')\n",
+        "      valor_coluna = valores[indice_coluna]\n",
+        "\n",
+        "      valor_convertido = None\n",
+        "\n",
+        "      if tipo_dado == 'str':\n",
+        "        valor_convertido = str(valor_coluna)\n",
+        "      elif tipo_dado == 'int':\n",
+        "        valor_convertido = int(valor_coluna)\n",
+        "\n",
+        "      if valor_convertido is not None:\n",
+        "        coluna.append(valor_convertido)\n",
         "\n",
         "  return coluna"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -223,29 +240,50 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 19,
       "metadata": {
         "id": "Rl-EYdySu90s"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['valor_venda', 'vhigh', 'med', 'low', 'low', 'low', 'low', 'low', 'low', 'low', 'low', 'low', 'low', 'low', 'low']\n"
+          ]
+        }
+      ],
       "source": [
         "# extrair a coluna valor_venda\n",
         "valor_venda = extrai_coluna_csv(nome_arquivo='./carros.csv', indice_coluna=1, tipo_dado='str')\n",
         "print(valor_venda) # deve retornar ['vhigh', 'med', 'low', ...]"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 20,
       "metadata": {
         "id": "hvD-zzwDwboD"
       },
+      "outputs": [
+        {
+          "ename": "ValueError",
+          "evalue": "invalid literal for int() with base 10: 'pessoas'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# extrair a coluna pessoas\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m pessoas = \u001b[43mextrai_coluna_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnome_arquivo\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m./carros.csv\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindice_coluna\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtipo_dado\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mint\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(pessoas) \u001b[38;5;66;03m# deve retornar [2, 2, 2, ...]\u001b[39;00m\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 16\u001b[39m, in \u001b[36mextrai_coluna_csv\u001b[39m\u001b[34m(nome_arquivo, indice_coluna, tipo_dado)\u001b[39m\n\u001b[32m     14\u001b[39m   valor_convertido = \u001b[38;5;28mstr\u001b[39m(valor_coluna)\n\u001b[32m     15\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m tipo_dado == \u001b[33m'\u001b[39m\u001b[33mint\u001b[39m\u001b[33m'\u001b[39m:\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m   valor_convertido = \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mvalor_coluna\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     18\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m valor_convertido \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m     19\u001b[39m   coluna.append(valor_convertido)\n",
+            "\u001b[31mValueError\u001b[39m: invalid literal for int() with base 10: 'pessoas'"
+          ]
+        }
+      ],
       "source": [
         "# extrair a coluna pessoas\n",
         "pessoas = extrai_coluna_csv(nome_arquivo='./carros.csv', indice_coluna=4, tipo_dado='int')\n",
         "print(pessoas) # deve retornar [2, 2, 2, ...]"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -276,9 +314,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "ewrNqMtczWZJ"
       },
+      "outputs": [],
       "source": [
         "def extrai_linha_txt(nome_arquivo: str, numero_linha: int):\n",
         "\n",
@@ -289,9 +329,7 @@
         "  # quebre a linha em palavras com o comando split, note que o separador é um espaço ' '\n",
         "\n",
         "  return palavras_linha"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -304,15 +342,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "_Wxp43qqz1V2"
       },
+      "outputs": [],
       "source": [
         "linha10 = extrai_linha_txt(nome_arquivo='./musica.txt', numero_linha=10)\n",
         "print(linha10) # deve retornar ['Mas', 'eis', 'que', 'chega', 'a', 'roda', 'viva']"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -323,5 +361,31 @@
         "---"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "module_4_exercise.ipynb",
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.9"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
