feat: complete exercise 2 Functions for text files

--- a/Python_M4_exercise.ipynb
+++ b/Python_M4_exercise.ipynb
@@ -123,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "id": "m7Ge2rggrU73"
       },
@@ -197,7 +197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "id": "W-1PAg7Ctt7i"
       },
@@ -222,9 +222,8 @@
         "        valor_convertido = str(valor_coluna)\n",
         "      elif tipo_dado == 'int':\n",
         "        valor_convertido = int(valor_coluna)\n",
-        "\n",
-        "      if valor_convertido is not None:\n",
-        "        coluna.append(valor_convertido)\n",
+        "        \n",
+        "      coluna.append(valor_convertido)\n",
         "\n",
         "  return coluna"
       ]
@@ -240,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 37,
       "metadata": {
         "id": "Rl-EYdySu90s"
       },
@@ -249,7 +248,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['valor_venda', 'vhigh', 'med', 'low', 'low', 'low', 'low', 'low', 'low', 'low', 'low', 'low', 'low', 'low', 'low']\n"
+            "['vhigh', 'med', 'low', 'low', 'low', 'low', 'low', 'low', 'low', 'low', 'low', 'low', 'low', 'low']\n"
           ]
         }
       ],
@@ -261,21 +260,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 38,
       "metadata": {
         "id": "hvD-zzwDwboD"
       },
       "outputs": [
         {
-          "ename": "ValueError",
-          "evalue": "invalid literal for int() with base 10: 'pessoas'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# extrair a coluna pessoas\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m pessoas = \u001b[43mextrai_coluna_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnome_arquivo\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m./carros.csv\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindice_coluna\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtipo_dado\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mint\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(pessoas) \u001b[38;5;66;03m# deve retornar [2, 2, 2, ...]\u001b[39;00m\n",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 16\u001b[39m, in \u001b[36mextrai_coluna_csv\u001b[39m\u001b[34m(nome_arquivo, indice_coluna, tipo_dado)\u001b[39m\n\u001b[32m     14\u001b[39m   valor_convertido = \u001b[38;5;28mstr\u001b[39m(valor_coluna)\n\u001b[32m     15\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m tipo_dado == \u001b[33m'\u001b[39m\u001b[33mint\u001b[39m\u001b[33m'\u001b[39m:\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m   valor_convertido = \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mvalor_coluna\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     18\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m valor_convertido \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m     19\u001b[39m   coluna.append(valor_convertido)\n",
-            "\u001b[31mValueError\u001b[39m: invalid literal for int() with base 10: 'pessoas'"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[2, 2, 2, 2, 2, 4, 4, 2, 2, 2, 4, 2, 4, 4]\n"
           ]
         }
       ],
@@ -314,7 +308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "ewrNqMtczWZJ"
       },
@@ -324,6 +318,11 @@
         "\n",
         "  palavras_linha = []\n",
         "\n",
+        "  with open(file=nome_arquivo, mode='r', encoding='utf8') as arquivo:\n",
+        "    \n",
+        "    linha = arquivo.readlines()[numero_linha]\n",
+        "    linha_limpa = linha.strip()\n",
+        "    palavras_linha = linha_limpa.split(' ')\n",
         "  # leia o arquivo com o comando 'with' utilizando o parametro 'nome_arquivo'\n",
         "  # extraia a linha do arquivo utilizando o parametro 'numero_linha'\n",
         "  # quebre a linha em palavras com o comando split, note que o separador é um espaço ' '\n",
@@ -342,11 +341,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "_Wxp43qqz1V2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['E', 'carrega', 'o', 'destino', 'pra', 'lá']\n"
+          ]
+        }
+      ],
       "source": [
         "linha10 = extrai_linha_txt(nome_arquivo='./musica.txt', numero_linha=10)\n",
         "print(linha10) # deve retornar ['Mas', 'eis', 'que', 'chega', 'a', 'roda', 'viva']"
