Correcting execution counts in the Python M4 exercise

--- a/Python_M4_exercise.ipynb
+++ b/Python_M4_exercise.ipynb
@@ -308,7 +308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 1,
       "metadata": {
         "id": "ewrNqMtczWZJ"
       },
@@ -320,7 +320,7 @@
         "\n",
         "  with open(file=nome_arquivo, mode='r', encoding='utf8') as arquivo:\n",
         "    \n",
-        "    linha = arquivo.readlines()[numero_linha]\n",
+        "    linha = arquivo.readlines()[numero_linha - 1]\n",
         "    linha_limpa = linha.strip()\n",
         "    palavras_linha = linha_limpa.split(' ')\n",
         "  # leia o arquivo com o comando 'with' utilizando o parametro 'nome_arquivo'\n",
@@ -341,7 +341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 2,
       "metadata": {
         "id": "_Wxp43qqz1V2"
       },
@@ -350,7 +350,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['E', 'carrega', 'o', 'destino', 'pra', 'lá']\n"
+            "['Mas', 'eis', 'que', 'chega', 'a', 'roda', 'viva']\n"
           ]
         }
       ],
