--- a/Python_M4_support material04.ipynb
+++ b/Python_M4_support material04.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "module_4_class.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -103,9 +89,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "vr4DaExbiyCr"
       },
+      "outputs": [],
       "source": [
         "%%writefile banco.csv\n",
         "age,job,marital,education,default,balance,housing,loan\n",
@@ -119,9 +107,7 @@
         "39,technician,married,secondary,no,147,yes,no\n",
         "41,entrepreneur,married,tertiary,no,221,yes,no\n",
         "43,services,married,primary,no,-88,yes,yes"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -178,9 +164,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "WpJWcVcEjz4s"
       },
+      "outputs": [],
       "source": [
         "conteudo = None\n",
         "\n",
@@ -188,9 +176,7 @@
         "  conteudo = arquivo.read()\n",
         "\n",
         "print(conteudo)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -212,9 +198,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "KJEJA17YnUC6"
       },
+      "outputs": [],
       "source": [
         "conteudo = []\n",
         "\n",
@@ -225,21 +213,19 @@
         "    linha = arquivo.readline() # lê uma nova linha, se a linha não existir, salva o valor None\n",
         "\n",
         "print(conteudo)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "qB3FMTB_nwZx"
       },
+      "outputs": [],
       "source": [
         "for linha in conteudo:\n",
         "  print(linha)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -252,9 +238,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "SpHHPRUOn8pZ"
       },
+      "outputs": [],
       "source": [
         "idades = []\n",
         "\n",
@@ -269,9 +257,7 @@
         "    linha = arquivo.readline() # lê uma nova linha, se a linha não existir, salva o valor None\n",
         "\n",
         "print(idades)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -348,9 +334,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "aqPMQ27bpfGL"
       },
+      "outputs": [],
       "source": [
         "with open(file='idades.csv', mode='w', encoding='utf8') as fp:\n",
         "  linha = 'idade' + '\\n'\n",
@@ -358,9 +346,7 @@
         "  for idade in idades:\n",
         "    linha = str(idade) + '\\n'\n",
         "    fp.write(linha)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -373,17 +359,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "s3fyBEszq6GL"
       },
+      "outputs": [],
       "source": [
         "with open(file='idades.csv', mode='a', encoding='utf8') as fp:\n",
         "  for idade in idades:\n",
         "    linha = str(idade + 100) + '\\n'\n",
         "    fp.write(linha)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -396,9 +382,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "fJ5OMzbar22Q"
       },
+      "outputs": [],
       "source": [
         "%%writefile banco-texto.txt\n",
         "age,job,marital,education,default,balance,housing,loan\n",
@@ -412,15 +400,15 @@
         "39,technician,married,secondary,no,147,yes,no\n",
         "41,entrepreneur,married,tertiary,no,221,yes,no\n",
         "43,services,married,primary,no,-88,yes,yes"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "mB-oJ_9FruGk"
       },
+      "outputs": [],
       "source": [
         "with open(file='./banco-texto.txt', mode='r', encoding='utf8') as leitura:\n",
         "  with open(file='./banco-csv.csv', mode='w', encoding='utf8') as escrita:\n",
@@ -428,9 +416,7 @@
         "    while linha:\n",
         "      escrita.write(linha)\n",
         "      linha = leitura.readline()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -461,9 +447,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "ivOfQr2f3yj7"
       },
+      "outputs": [],
       "source": [
         "valor_inicial, taxa_juros_anual, anos = 1000.00, 0.05, 10\n",
         "\n",
@@ -480,9 +468,7 @@
         "  valor_final = valor_final * (1 + taxa_juros_anual)\n",
         "valor_final = round(valor_final, 2)\n",
         "print(f'Para um valor inicial de R$ {valor_inicial} e uma taxa de juros anual de {taxa_juros_anual}, em {anos} anos você terá R$ {valor_final}') "
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -530,37 +516,37 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "HOGLdF3dv-8D"
       },
+      "outputs": [],
       "source": [
         "def imprime(mensagem: str):\n",
         "  print(mensagem)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "TzaUvMeKwJ63"
       },
+      "outputs": [],
       "source": [
         "texto = 'Fala pessoal, meu nome é André Perez!'"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "5Csj9AY3wOMX"
       },
+      "outputs": [],
       "source": [
         "imprime(mensagem='Fala pessoal, meu nome é André Perez!')"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -582,60 +568,60 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "yjZXbgGLz7LF"
       },
+      "outputs": [],
       "source": [
         "def maiusculo(texto: str) -> str:\n",
         "  text_maiusculo = texto.upper()\n",
         "  return text_maiusculo"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "sfAJqKF80KcU"
       },
+      "outputs": [],
       "source": [
         "nome = 'André Perez'\n",
         "print(nome)\n",
         "\n",
         "nome_maiusculo = maiusculo(texto=nome)\n",
         "print(nome_maiusculo)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "6oGDzweQtaJ1"
       },
+      "outputs": [],
       "source": [
         "def extrair_usuario_email_provedor(email: str) -> (str, str):\n",
         "  email_separado = email.split(sep='@')\n",
         "  usuario = email_separado[0]\n",
         "  provedor = email_separado[1]\n",
         "  return usuario, provedor"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "nK9i6Eqttiwc"
       },
+      "outputs": [],
       "source": [
         "email = 'andre.perez@gmail.com'\n",
         "usuario, provedor = extrair_usuario_email_provedor(email=email)\n",
         "print(usuario)\n",
         "print(provedor)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -666,51 +652,51 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "1QWOVjF5Qa7P"
       },
+      "outputs": [],
       "source": [
         "def pi() -> float:\n",
         "  return 3.14159265359"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "j4rf5u9vQtgW"
       },
+      "outputs": [],
       "source": [
         "pi = pi()\n",
         "print(pi)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "E0HdlKYHQw55"
       },
+      "outputs": [],
       "source": [
         "def imprime_pi() -> None:\n",
         "  print(3.14159265359)\n",
         "  return None"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "jHgpZqHnQ4JW"
       },
+      "outputs": [],
       "source": [
         "imprime_pi()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -723,9 +709,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "U0fc5LA_EFTW"
       },
+      "outputs": [],
       "source": [
         "def escreve_arquivo_csv(nome: str, cabecalho: str, conteudos: list) -> bool:\n",
         "\n",
@@ -744,15 +732,15 @@
         "    return False\n",
         "\n",
         "  return True"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "MRyFsh_nQFJh"
       },
+      "outputs": [],
       "source": [
         "nome = 'idades-funcao-erro.csv'\n",
         "cabecalho = 'idade'\n",
@@ -761,9 +749,7 @@
         "\n",
         "escreveu_com_sucesso = escreve_arquivo_csv(nome=nome, cabecalho=cabecalho, conteudos=conteudos)\n",
         "print(escreveu_com_sucesso)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -776,9 +762,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "B9fVGad25GHm"
       },
+      "outputs": [],
       "source": [
         "def juros_compostos_anual(valor_inicial: float, taxa_juros_anual: float, anos: int) -> float:\n",
         "  valor_final = valor_inicial\n",
@@ -793,9 +781,7 @@
         "\n",
         "valor_inicial, taxa_juros_anual, anos = 1020.00, 0.03, 10\n",
         "valor_final = juros_compostos_anual(valor_inicial=valor_inicial, taxa_juros_anual=taxa_juros_anual, anos=anos) "
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -835,41 +821,41 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "ePdJM9qQuWrF"
       },
+      "outputs": [],
       "source": [
         "def soma_lista(numeros: list) -> int:\n",
         "  s = 0\n",
         "  for numero in numeros:\n",
         "    s = s + numero\n",
         "  return s"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "3tILascnunHK"
       },
+      "outputs": [],
       "source": [
         "soma = soma_lista(numeros=[2] * 20)\n",
         "print(soma)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "eGUN-4_ju0a6"
       },
+      "outputs": [],
       "source": [
         "print(s)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -882,9 +868,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "hQQ85zrYvP-w"
       },
+      "outputs": [],
       "source": [
         "if True:\n",
         "  x = 100\n",
@@ -892,9 +880,33 @@
         "  w = 50\n",
         "\n",
         "print(x)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "module_4_class.ipynb",
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.9"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
